# bazel-ide-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: __init__.py  bazel_ide.py
vscode-extension/: .eslintrc.json  README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: starlark.tmLanguage.json
