[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bazel-ide-toolkit"
version = "0.1.0"
description = "Automatic compile_commands.json generation for Bazel projects"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Srikanth Arunachalam", email = "srikantharun@users.noreply.github.com" }
]
keywords = ["bazel", "ide", "compile_commands", "clangd", "lsp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bazel-ide = "cli.bazel_ide:main"

[project.urls]
Homepage = "https://github.com/srikantharun/bazel-ide-toolkit"
Repository = "https://github.com/srikantharun/bazel-ide-toolkit"
Issues = "https://github.com/srikantharun/bazel-ide-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W"]
